atualização do dia 01 setembro 2022

--- a/index.html
+++ b/index.html
@@ -2,17 +2,25 @@
 <html lang="pt-br">
 	<head>
 		<meta charset="UTF-8">
-		<link rel="stylesheet" href="Projeto.css">
-		<title>Barbearia Alura</title>
+		<link rel="stylesheet" href="projeto.css">
+		<title>DICAS DE MAQUIAGENS</title>
 	</head>
 
 	<body>
-		<h1>Sobre a Barbearia Alura</h1>
+		<h1>DICAS DE MAQUIAGENS: iniciantes</h1>
 
-		<p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
+		<p>A maquiagem em si é um desafio, principalmente para iniciantes.<strong>DICAS DE MAQUIAGEM: iniciantes</strong> Mas aqui você irá aprender dicas que deixaram essa missão mais fácil.</p>
 
-		<p><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p>
+		<p><em>Confira agora: <strong>Primeiro de tudo você precisa hidratar muito bem a sua pele por que caso contrário vocẽ  irá ficar com espinhas, cravos e várias manchas, por isso hidrate a sua pele com um hidratante de boa qualidade.</strong>.</em></p>
 
-		<p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
+		<p>Além disso você precisa escolhe o tipo de hidrante certo para o seu tipo de pele;  Não é por 
+que sua pele é oleosa que vocẽ não precisa hidratar, você só precisa escolher o hidratante certo! Se sua pele é seca também não precisa encher o 
+rosto de hidrante por que irá lhe prejudicar no futuro deixando-le com espinhas.Pós hidratar vocẽ também deve passar protetor isso é um fato muito
+importante, você deve passar até três camadas para que sua pele fique bem protegida.
+Agora sim você pode começar a se maquiar, comece com a base do tom da sua pele 
+</p>
 	</body>
 </html>
+
+
+
