--- a/index.html
+++ b/index.html
@@ -3,24 +3,45 @@
 	<head>
 		<meta charset="UTF-8">
 		<link rel="stylesheet" href="projeto.css">
-		<title>DICAS DE MAQUIAGENS</title>
+		<title>MAQUIAGEM ARTÌSTICA</title>
 	</head>
 
 	<body>
-		<h1>DICAS DE MAQUIAGENS: iniciantes</h1>
+		<img  id= "capa" src="capa.jpg">
 
-		<p>A maquiagem em si é um desafio, principalmente para iniciantes.<strong>DICAS DE MAQUIAGEM: iniciantes</strong> Mas aqui você irá aprender dicas que deixaram essa missão mais fácil.</p>
 
-		<p><em>Confira agora: <strong>Primeiro de tudo você precisa hidratar muito bem a sua pele por que caso contrário vocẽ  irá ficar com espinhas, cravos e várias manchas, por isso hidrate a sua pele com um hidratante de boa qualidade.</strong>.</em></p>
+		<h1>MAQUIAGEM ARTÌSTICA</h1>
 
-		<p>Além disso você precisa escolhe o tipo de hidrante certo para o seu tipo de pele;  Não é por 
-que sua pele é oleosa que vocẽ não precisa hidratar, você só precisa escolher o hidratante certo! Se sua pele é seca também não precisa encher o 
-rosto de hidrante por que irá lhe prejudicar no futuro deixando-le com espinhas.Pós hidratar vocẽ também deve passar protetor isso é um fato muito
-importante, você deve passar até três camadas para que sua pele fique bem protegida.
-Agora sim você pode começar a se maquiar, comece com a base do tom da sua pele 
+		<p>A maquiagem artística em si é um desafio, principalmente para iniciantes.<strong>MAQUIAGEM ARTÌSTICA</strong> Mas aqui você irá aprender dicas que deixaram essa missão mais fácil.</p>
+
+		<p><em>Confira agora: <strong>Comece com um bom planejamento do que pretende fazer
+Seja iniciante, seja veterano na maquiagem artística, o primeiro passo é sempre ter uma boa ideia do que pretende fazer na sua make. O planejamento ajudará a separar todo o material necessário para garantir os efeitos desejados.
+
+Assim, você terá todos os produtos ao seu alcance para não deixar faltar nada de importante nos momentos cruciais. Por exemplo, se pretende fazer uma cicatriz ou ferida, pense sobre quais são os materiais que vai usar, o que é necessário para dar um efeito mais realista, entre outros aspectos.
+
+Se pretende fazer um personagem, como uma bruxa, avalie a maquiagem de envelhecimento, as cores que precisará, o que em uma make tradicional ajudará você no efeito dessa figura, entre outras questões. Liste tudo o que usará e garanta produtos de boa qualidade..</strong>.</em></p>
+
+		<p>Faça riscos de teste no rosto antes de partir para a make definitiva
+Pinturas e desenhos mais elaborados requerem atenção para saírem perfeitos. Por isso, um dos truques de maquiagem para teatro é fazer o desenho no seu rosto antes de, literalmente, pintar a face com a make definitiva. Você pode usar lápis de maquiagem para isso.
+
+Não é preciso fazer riscos tão marcados ou mesmo perfeitos; eles servirão apenas de orientação para a pintura real que vai realizar no rosto. Ainda que a maquiagem artística não cubra totalmente a face, podem-se fazer ainda pequenos pontinhos que orientem melhor o seu desenho.
+
+Se você está começando na maquiagem artística, use poucas cores
+Combinar as cores pode ser complicado para quem não tem tanta experiência em maquiagem artística. O truque para garantir um resultado incrível, sem o risco de errar nas combinações, é escolher poucas cores.
+
+Já ouviu falar que “menos é mais”? Então: nesse caso também! Assim, as chances de acertar na combinação cromática ideal para sua make teatral será maior.
+Realce a maquiagem teatral com técnica de maquiagem tradicional
+Alguns pontos do rosto podem ser realçados com técnicas de maquiagem tradicional, mesmo quando se trata de maquiagem artística.
+
+Por exemplo, uma boa preparação de pele, contorno facial, destaque para os olhos com cílios postiços e máscara para cílios. A depender do personagem que você deseja criar, até mesmo o uso de blush e batom é válido!
+
+Pratique com tutoriais on-line
+Somente a prática pode aperfeiçoar a sua técnica, e isso inclui pesquisas e testes. Por isso, antes de se aventurar na maquiagem artística profissional, faça testes em você mesma, busque alguns tutoriais na internet, examine as técnicas que já conhece e as novas que pode adquirir. Dessa forma, você adquire experiência e poderá ousar mais e mais quando for necessário. Sem medo de errar!
+
+E você, gostou desses truques de maquiagem para teatro? Então acesse a loja online da Catharine Hill e confira os nossos produtos de maquiagem artística!
 </p>
 	</body>
-</html>
+ <html> 
 
 
 
