--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
-<!DOCTYPE html>
+
+!DOCTYPE html>
 <html lang="pt-br">
 	<head>
 		<meta charset="UTF-8">
+		<link rel="stylesheet" href="reset.css">
 		<link rel="stylesheet" href="projeto.css">
 		<title>MAQUIAGEM ARTÌSTICA</title>
 	</head>
